<resources>
    <string name="app_name">ChatZ</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="groups">Groups</string>
    <string name="join">Join</string>
    <string name="read_more">Read More</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="post">Post</string>
    <string name="add_comment">Add Comment</string>
    <string name="comment_something">Comment something...</string>
    <string name="say_something">Say something nice</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="add_picture">Add Picture</string>
    <string name="my_profile">My Profile</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="add_user">Add User</string>
    <string name="contacts">Contacts</string>
    <string name="username">Username</string>
    <string name="theme">Theme</string>
    <string name="profile">Profile</string>
    <string name="chat_room">Chat Room</string>
    <string name="Edited">(edited)</string>
    <string name="theme_description">Change the theme of app</string>
</resources>
