<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPost"
    android:background="?attr/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorHeader"
            app:menu="@menu/create_post_screen_toolbar_menu"
            app:navigationIcon="@drawable/back_icon"
            app:title="@string/post" />
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:id="@+id/ProgressBar"
        android:progressBackgroundTint="@color/colorPrimaryDarkTwo"
        android:visibility="gone"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AppBarLayout"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:padding="16dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/postTitle"
            android:background="@null"
            android:hint="@string/title"
            android:textSize="14sp"
            android:textColor="?attr/colorText"
            android:textColorHint="@color/colorPlaceholder" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:id="@+id/postBody"
            android:hint="@string/body"
            android:background="@null"
            android:gravity="top"
            android:textSize="14sp"
            android:layout_weight="1"
            android:textColorHint="@color/colorPlaceholder"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>