<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="?attr/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AppBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/register"
            android:id="@+id/RegisterToolbar"
            android:background="?attr/colorHeader"
            app:navigationIcon="@drawable/back_icon"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/ProgressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:progress="0"
        android:progressBackgroundTint="@color/colorPrimaryDarkTwo"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AppBarLayout" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AppBarLayout"
        android:layout_marginTop="32dp"
        android:id="@+id/linear"
        android:gravity="center_vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="108dp"
            android:layout_height="108dp"
            app:cardCornerRadius="54dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/RegisterProfilePicture"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:src="@drawable/add_icon"
            android:onClick="AddImage"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginStart="32dp"/>
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UsernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/username"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintVertical_bias="0.25">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorCard"
            android:textColor="?attr/colorText"
            android:textColorHint="@color/colorPlaceholder"
            android:id="@+id/UsernameEditText"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UsernameLayout"
        app:layout_constraintVertical_bias="0.07999998">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorCard"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorText"
            android:textColorHint="@color/colorPlaceholder" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="Password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmailLayout"
        app:layout_constraintVertical_bias="0.15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorCard"
            android:inputType="textPassword"
            android:textColor="?attr/colorText"
            android:textColorHint="@color/colorPlaceholder" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswordLayout"
        android:text="@string/register"
        app:icon="@drawable/chevron_right"
        android:onClick="Register"/>

</androidx.constraintlayout.widget.ConstraintLayout>